Sat Sep  7 21:33:10 2013  Tanaka Akira  <akr@fsij.org>

	* math.c (math_log): Test the sign for bignums.
	  (math_log2): Ditto.
	  (math_log10): Ditto.

Sat Sep  7 20:25:47 2013  Tanaka Akira  <akr@fsij.org>

	* math.c (math_log): Support bignums bigger than 2**1024.
	  (math_log2): Ditto.
	  (math_log10): Ditto.

Sat Sep  7 15:36:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* vm_eval.c (vm_call0): fix prototype, the id parameter should be of
	  type ID, not VALUE

	* vm_insnhelper.c (check_match): the rb_funcall family of functions
	  does not care about refinements. We need to use
	  rb_method_entry_with_refinements instead to call === with
	  refinements. Thanks to Jon Conley for reporting this bug.
	  [ruby-core:57051] [Bug #8872]

	* test/ruby/test_refinement.rb: add test

Sat Sep  7 13:49:40 2013  Kazuki Tsujimoto  <kazuki@callcc.net>

	* variable.c (classname): the name of class that has
	  non class id should not be nil. This bug was introduced
	  in r36577.

	* test/thread/test_cv.rb: test for change.

Sat Sep  7 13:29:22 2013  Kazuki Tsujimoto  <kazuki@callcc.net>

	* lib/find.rb (Find.find): respect the encodings of arguments.
	  [ruby-dev:47530] [Feature #8657]

	* test/test_find.rb: add tests.

Sat Sep  7 10:40:32 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/mkconstants.rb (TCP_FASTOPEN): Defined for TCP fast open.
	  [ruby-core:57048] [Feature #8871] patch by Masaki Matsushita.

Fri Sep  6 23:53:31 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* common.mk: use RUNRUBY instead of MINIRUBY because MINIRUBY can't
	  require extension libraries. The patch is from nobu
	  (Nobuyoshi Nakada).

	* ext/thread/extconf.rb: for build ext/thread/thread.c.

	* include/ruby/intern.h: ditto.

	* thread.c: ditto.

	* lib/thread.rb: removed and replaced by ext/thread/thread.c.

	* ext/thread/thread.c: Queue, SizedQueue and ConditionVariable
	  implementations in C. This patch is based on patches from panaggio